--- a/euromilh/euromilh.csproj
+++ b/euromilh/euromilh.csproj
@@ -46,7 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="boletim.cs" />
+    <Compile Include="euromilhões.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -55,7 +55,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="sorteio.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -87,6 +86,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\euromilhoes.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\e9247a64cdb169bc61f1046f6e315bce_400x400 %281%29.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
